[tool.poetry]
name = "lqttexteditor"
version = "1.0.0"
description = "A more advanced text editor for PyQt"
authors = ["Liam Collod <monsieurlixm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
"Qt.py" = "1.3.8"

[tool.poetry.dev-dependencies]
black = "*"
PySide2 = "^5.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

